style.css
body {
	/*padding-top: 150px;*/
	background-color: #edefed; 
	padding: 0;
	margin: 0;
}

.main {

  /*width: 40%;*/

  background-color: white;
  color: #007497;
  padding: 0 0 0 15px;
  width: 900px;
  height: 400px;
  float: left;
  margin: 0 10px 10px 30px;
  border: outset whiteSmoke;
}


#textbox {
	margin: 7px;
	background-color: teal;
	height: 50px;
	padding-top: 25px;
	color: white;
	font-family: 'Droid Sans', sans-serif;
	padding-left: 15px;
}

.side-left { 

  /*width: 5%;*/
 	background-color: teal;
 	color: white;
	padding: 0 15px;
      width: 200px;
      height: 400px;
      float: left;
      margin: 0 10px 10px 80px;
      border: outset whiteSmoke;

}

.button {
	list-style: none;
	border-radius: 50px;
	border: black thin solid;
	background-color: #C0C0C0;
	width: 60px;
	text-align: center;
}

.all-forms {
	padding: 15px;*/
}

/*ARTICLE STYLING*/

#article-songs {
	background-color: #white;
	font-size: large;
	color: #785616;
  	padding: 10px 0 0 15px;	
  	font-family: 'Droid Sans', sans-serif;
}

.space-between {
	margin: 0 0 10px;
}

.song-title {
	 color: #785616;
	 padding: 0 0 0 15px ;
}

.article-text {
	padding: 2px 0 3px 15px;
	font-family: 'Droid Sans', sans-serif;
}

/*NAVIGATION*/



#logo {
	font-family: 'Covered By Your Grace', cursive;
	display: inline;
	font-size: 45px;
	color: RebeccaPurple;
	background-color: #007497;
	text-align: center;

}

#logo > h1 {
	background-size: cover;
	height: 300px;
	background-repeat: no-repeat;
	background-image: url(https://static.pexels.com/photos/6319/smartphone-vintage-technology-music-large.jpg);
}


.nav {
	width: 100%;
	display: inline-block;
}

.nav>nav>ul>li {

	display: inline;
	padding: 2px;
	list-style-type: none;
	font-family: 'Droid Sans', sans-serif;

}

nav ul {
	text-align: left;
	padding-left: 5px;
	text-decoration: none;
}

.nav>nav {
	background-color: #26272a;
	font-style: Arial;
	font-size: 20px;
	padding: 2px;

	
	
}

nav li a {
	text-decoration: none;
	color: lightGray;
}

li.selected a {
	text-decoration: none;
	color: white;

}

/*COLOR ASSIGNMENT*/
/*
#article-songs p:nth-child(2n+0) {
  background-color: #FFF5EE;
}

#article-songs p:nth-child(2n+1) {
	background-color: #F5FFFA;
}

#article-songs p:first-child {
	font-weight: bold;
}*/

/*GENRE FORM*/

#genre1>ul>li {
	list-style-type: none;
}

.genre-text{
	display: block;
	margin: 10px 0 0 0;
}

#genre2>ul>li {
	list-style-type: none;
}

#genre2 {
	display: inline-block;
}

#genre1 {
	/*margin-left: -50px;*/
	/*float: left;*/
	display:inline-block;
}
#genre1 > ul {
	padding-left: 0px
}
#genre2 > ul {
	padding-left: 0px;
}

/*SINGLE PAGE APPLICATION*/

.visible {
  display: block;
}

.hidden {
  display: none;
}

